✨ feat: create slice reducer for dashboard feature

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,8 @@
    "implicit-arrow-linebreak":"off",
    "prefer-arrow-callback":"off",
    "func-names":"off",
-   "no-unused-vars": "warn"
+   "no-unused-vars": "warn",
+   "no-param-reassign": [2, { "props": false }]
 	},
 	"settings": {
     "import/resolver": {
